<resources>
    <string name="app_name">আল্লাহর ৯৯ নাম</string>
    <string name="allah_name">আল্লাহর ৯৯ নাম</string>
    <string name="bismilla">বিসমিল্লাহির রাহমানির রাহিম</string>
    <string name="translet">পরম করুণাময় অসীম দয়ালু আল্লাহতায়ালার নামে শুরু করছি।</string>
    <string name="bangla">অর্থ ও ব্যাখ্যা</string>
    <string name="start">Start</string>
    <string name="btn">ব্যাখ্যা</string>
    <string name="allah">الله</string>
    <string name="rohman">الرَّحْمَنُ</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="abc">সবচাইতে দয়ালু,কল্যাণময়,করুণাময়</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_21">21</string>
    <string name="_6">6</string>
    <string name="_20">20</string>
    <string name="Allah_name">


    </string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_05">05</string>
    <string name="_06">06</string>
    <string name="_07">07</string>
    <string name="_08">08</string>
    <string name="_09">09</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_36">36</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_51">51</string>
    <string name="_52">52</string>
    <string name="_54">54</string>
    <string name="_55">55</string>
    <string name="_56">56</string>
    <string name="_58">58</string>
    <string name="_59">59</string>
    <string name="_60">60</string>
    <string name="_61">61</string>
    <string name="_62">62</string>
    <string name="_64">64</string>
    <string name="_17">17</string>
    <string name="Allah_1">আল্লাহ</string>
    <string name="Allah_99_name">আল্লাহর ৯৯ নাম</string>
    <string name="Ar_rohman">আর-রহমান</string>
    <string name="about">About</string>
    <string name="about_developer">ABOUT DEVELOPER</string>
    <string name="dev_about">আসসালামু আলাইকুম ওয়া রহমাতুল্লাহি ওয়া বারাকাতুহু।\n সকল প্রশংসা কেবলমাত্র এক আল্লাহর জন্য। আল্লাহর অশেষ মেহেরবানী তে এই অ্যাপটি তৈরি করতে পারলাম। আমি Manarat International University এর একজন ছাত্র। আল্লাহর ৯৯ টি নাম দিয়ে তৈরী করলাম প্রথম ইসলামিক অ্যাপ। আমার জন্য দোয়া করবেন যেন আমি নিজের প্রোগ্রামিং স্ক্রিল ইসলামের জন্য এবং মানুষের কল্যানে ব্যয় করতে পারি। \t\t- সৈয়দ ফয়সাল হোসেন</string>
</resources>