<?xml version="1.0" encoding="utf-8"?>


    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        app:cardElevation="9dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/View_layout_All">

            <TextView
                android:id="@+id/number"
                style="@style/number_txt"
                android:text="@string/_01"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/name"
                style="@style/name_txt_all"
                android:text="@string/rohman"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/arabic_translate"
                style="@style/arabic_translate_all"
                android:text="@string/Ar_rohman"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/bangla_translate"
                style="@style/bangla_translate"
                android:text="@string/bangla"
                app:layout_constraintBottom_toTopOf="@+id/btn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/arabic_translate"
                app:layout_constraintVertical_bias="0.484" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn"
                style="@style/button"
                android:text="@string/btn"
                android:textColor="@color/dip_green"
                app:icon="@drawable/ic_comment_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/parot"
                app:strokeWidth="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

