<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/colour_shap"
        android:orientation="vertical"
        android:gravity="center"

        tools:context=".StartActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:src="@drawable/bismilla2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bismilla"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="#FFEB3B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translet"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:background="@drawable/button_shap"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                app:strokeWidth="2dp"
                android:textSize="30sp"
                app:strokeColor="@color/red" />
        </LinearLayout>


    </LinearLayout>